# braintrust-evals-101

./: .gitignore  CLAUDE.md
py/: .env.example  README.md  pyproject.toml  requirements.txt
py/braintrust/: __init__.py  countries.py
py/src/: __init__.py
py/src/basics/: __init__.py  ai_proxy.py  prompt_building.py
py/src/evals/: __init__.py
py/src/evals/00_using_autoevals/: __init__.py  using_autoevals.py
py/src/evals/01_customizing_autoevals/: __init__.py  customizing_autoevals.py
py/src/evals/02_use_braintrust_objects/: __init__.py  use_braintrust_objects.py
py/src/evals/03_write_custom_scorers/: __init__.py  write_custom_scorers.py
py/src/evals/04_multiturn/: multiturn_scoring.py
py/src/setup/: __init__.py  braintrust_setup.py
py/src/setup/data/: MultiturnDataset.json
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/braintrust/: countries.ts
ts/src/Basics/: ai-proxy.ts  prompt-building.ts
ts/src/Evals/00-using-autoevals/: using-autoevals.ts
ts/src/Evals/01-customizing-autoevals/: customizing-autoevals.ts
ts/src/Evals/02-use-braintrust-objects/: use-braintrust-objects.ts
ts/src/Setup/: braintrust-setup.ts
