[project]
name = "braintrust-evals-py"
version = "1.0.0"
description = "Python tutorial for AI and LLM evaluations using Braintrust"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["braintrust", "ai", "llm", "evaluation", "python"]
dependencies = [
    "braintrust[cli]==0.5.0",
    "autoevals>=0.0.129",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38" 

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
